update: Atualizando Diagrama de classes e atualizando a busca completa pelo ID para ContatoService